--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="/images/gallery/fulls/Forsyth Forward.jpg" class="image">
+										<img src="images/gallery/thumbs/Forsyth_Forward_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>December 08, 2025</p>
+										<h3>Forsyth Forward</h3>
+										<p>Nestled in Michigan’s Upper Peninsula, Forsyth Township — including the communities of Gwinn, MI, K.I. Sawyer, MI, and Little Lake, MI — is getting a new spark of energy thanks to Forsyth Forward.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="/blog/blog_posts/forsyth_forward.html" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article>
@@ -105,7 +106,7 @@
 										<h3>Feugiat Lorem</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Read More</span></li>
 										</ul>
 									</div>
 								</article>
@@ -133,7 +134,8 @@
 										</ul>
 									</div>
 								</article>
-								<article>
+
+								<!-- <article>
 									<a href="images/gallery/fulls/05.jpg" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
@@ -228,7 +230,8 @@
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
-								</article>
+								</article> -->
+								
 							</div>
 
 					</section>
@@ -284,6 +287,9 @@
 									<h3>Silver-Lead Creek Greenway</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
+
+
+
 								<!-- <section>
 									<span class="icon solid style2 major fa-bolt"></span>
 									<h3>Turpis</h3>
