--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>Sawyer Community Alliance</h1>
 							<p class="major">Our mission is to enhance the quality of life for everyone in KI Sawyer by strengthening every aspect of our community—from housing and local governance to education, health, recreation, and long-term growth. We invite you to explore our site, share your ideas, and join us in shaping a vibrant, thriving place to live, work, and play.</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Upcoming Events</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle" target="_blank">Upcoming Events</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -37,7 +37,7 @@
 							<h2>Little Trout Lake</h2>
 							<p>KI Sawyer’s newly renovated wellness and recreation hub sits along the Silver-Lead Creek Greenway and offers full ADA accessibility. The park features a lakeside pavilion, restrooms with a bottle-filling station, pickleball and basketball courts, beach volleyball, permanent cornhole platforms, and a vibrant playground. It’s the perfect spot for a family picnic or community gathering.</p>
 							<ul class="actions stacked">
-								<li><a href="https://www.co.marquette.mi.us/departments/sawyer_services/little_trout_lake.php" class="button">Learn More</a></li>
+								<li><a href="https://www.co.marquette.mi.us/departments/sawyer_services/little_trout_lake.php" class="button" target="_blank">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -51,7 +51,7 @@
 							<h2>K.I. Sawyer Heritage Air Museum</h2>
 							<p>The Museum is dedicated to preserving and promoting the Upper Peninsula’s aviation heritage—military and civilian alike—while educating the public on the vital role airpower plays in our nation’s defense and economy. Our Silver Wings Community Center is available to rent at an affordable rate for events of all kinds, from conferences and celebrations to reunions and banquets. We’re proud to offer the space free of charge to local charities."</p>
 							<ul class="actions stacked">
-								<li><a href="https://kisawyerheritageairmuseum.org/" class="button">Learn More</a></li>
+								<li><a href="https://kisawyerheritageairmuseum.org/" class="button" target="_blank">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -65,9 +65,9 @@
 							<h2>Trail Systems</h2>
 							<p>KI Sawyer offers an abundance of scenic trails perfect for walking, hiking, and exploring the outdoors. With both motorized and non-motorized routes woven throughout the community, there’s something for every type of adventurer. Whether you’re out for a peaceful stroll or an adrenaline-filled ride, KI Sawyer’s trail network delivers endless opportunities to enjoy nature.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Silver-Lead Creek Greenway</a></li>
-								<li><a href="#" class="button">KI Fitness Trail</a></li>
-								<li><a href="#" class="button">ORV Trails</a></li>
+								<li><a href="#" class="button" target="_blank">Silver-Lead Creek Greenway</a></li>
+								<li><a href="#" class="button" target="_blank">KI Fitness Trail</a></li>
+								<li><a href="#" class="button" target="_blank">ORV Trails</a></li>
 							</ul>
 				
 						</div>
@@ -87,7 +87,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="/images/gallery/fulls/Forsyth Forward.jpg" class="image">
-										<img src="images/gallery/thumbs/Forsyth_Forward_thumb.jpg" alt="" />
+										<img src="images/gallery/thumbs/Forsyth_Forward_thumb.jpg" alt="Forsyth Forward logo set in tree canopy" />
 									</a>
 									<div class="caption">
 										<p>December 08, 2025</p>
@@ -99,135 +99,56 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="images/gallery/fulls/little-trout-lake.jpg" class="image">
+										<img src="images/gallery/thumbs/little-trout-lake-thumb.jpg" alt="calm lake near field of trees" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>December 09, 2025</p>
+										<h3>Little Trout Lake</h3>
+										<p>A bold vision of reconnection — between neighbors, nature, and community spaces — is becoming real through the Silver Lead Creek Greenway (SLCG) and the revitalization of Little Trout Lake Park (LTL).</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Read More</span></li>
+											<li><a href="/blog/blog_posts/little_trout_lake.html" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+									<a href="images/gallery/fulls/Community Garden.jpg" class="image">
+										<img src="images/gallery/thumbs/Community-Garden-thumb.jpg" alt="People standing in front of a community garden" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>December 09, 2025</p>
+										<h3>Growing Together</h3>
+										<p>The community organization Let’s Grow KI (LGKI) is cultivating health, connection, and food security through its neighborhood garden and collaborative programs.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="/blog/blog_posts/growing-together.html" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+									<a href="images/gallery/fulls/Sawyer-community-enrichment.jpg" class="image">
+										<img src="images/gallery/thumbs/blank.jpg" alt="Sawyer Community Enrichment logo" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>December 10, 2025</p>
+										<h3>Building Together</h3>
+										<p>Nestled in K.I. Sawyer, Michigan, Sawyer Community Enrichment has become a cornerstone for community</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="/blog/blog_posts/building-together.html" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article>
 
+								<!-- TEMPLATE -->
 								<!-- <article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="images/gallery/fulls/blank.jpg" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ultrices Magna</h3>
+										<p>Blog Date</p>
+										<h3>Blog Title</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article> -->
