--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Building a Better KI Sawyer - Sawyer Community Alliance</title>
+		<title>Building a Better K.I. Sawyer - Sawyer Community Alliance</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Sawyer Community Alliance</h1>
-							<p class="major">Our mission is to enhance the quality of life for everyone in KI Sawyer by strengthening every aspect of our community—from housing and local governance to education, health, recreation, and long-term growth. We invite you to explore our site, share your ideas, and join us in shaping a vibrant, thriving place to live, work, and play.</p>
+							<p class="major">Our mission is to enhance the quality of life for everyone in K.I. Sawyer by strengthening every aspect of our community—from housing and local governance to education, health, recreation, and long-term growth. We invite you to explore our site, share your ideas, and join us in shaping a vibrant, thriving place to live, work, and play.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle" target="_blank">Upcoming Events</a></li>
 							</ul>
@@ -127,7 +127,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/Sawyer-community-enrichment.jpg" class="image">
-										<img src="images/gallery/thumbs/blank.jpg" alt="Sawyer Community Enrichment logo" />
+										<img src="images/gallery/thumbs/Sawyer-community-enrichment-thumb.jpg" alt="Sawyer Community Enrichment logo" />
 									</a>
 									<div class="caption">
 										<p>December 10, 2025</p>
@@ -167,47 +167,47 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Little Trout Lake</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>KI Sawyer’s newly renovated wellness and recreation hub sits along the Silver-Lead Creek Greenway and offers full ADA accessibility.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-save"></span>
+									<span class="icon solid style2 major fa-dumbbell"></span>
 									<h3>KI Fitness Trail</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>This mile-and-a-half fitness trail follows the path of an old military training track, now rebuilt for year-round use—serving hikers and fitness enthusiasts in summer and cross-country skiers in winter.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chart-bar"></span>
+									<span class="icon solid style2 major fa-landmark"></span>
 									<h3>Air Museum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>The Museum is dedicated to preserving and promoting the Upper Peninsula’s aviation heritage—military and civilian alike—while educating the public on the vital role airpower plays in our nation’s defense and economy.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-wifi"></span>
+									<span class="icon solid style2 major fa-seedling"></span>
 									<h3>Lets Grow KI</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Local garden plots provide families with nearby options for fresh vegetables, a valuable resource in a rural area where grocery access is limited.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-cog"></span>
+									<span class="icon solid style2 major fa-globe"></span>
 									<h3>Red Fox Golf Course</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Just three minutes from Marquette Sawyer Airport in Gwinn, Michigan, Red Fox Run is an 18-hole golf course set in a scenic setting that makes every hole a breathtaking experience.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Marquette County Airport</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Marquette Sawyer Airport</h3>
+									<p>Marquette Sawyer Regional Airport is a county-owned, public-use airport in Marquette County, Michigan, United States, just minutes away from K.I. Sawyer.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-desktop"></span>
+									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Disc Golf</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>The 9-hole course is free to the public with more than 40 acres to move around.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
 									<h3>ORV Trails</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>Marquette County offers over 40 miles of well-marked ATV/ORV trails, perfect for backroads exploration. They provide a great way to experience the natural beauty of the Upper Peninsula.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-hashtag"></span>
+									<span class="icon solid style2 major fa-walking"></span>
 									<h3>Silver-Lead Creek Greenway</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>This landscaped walking trail offers a safe, non-motorized path to nearby businesses and services, encouraging everyone to get outside and explore. It’s a unique community resource right out your back door, serving as both a kid-friendly commute route and an outdoor learning corridor.</p>
 								</section>
 
 
@@ -268,7 +268,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; 2025 Sawyer Community Alliance. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; 2025 Sawyer Community Alliance.</p>
 						</div>
 					</footer>
 
@@ -284,6 +284,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-
 </html>
-
