Added blog entry and removed placeholder pics

--- a/index.html
+++ b/index.html
@@ -87,15 +87,28 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="/images/gallery/fulls/Forsyth Forward.jpg" class="image">
-										<img src="images/gallery/thumbs/Forsyth_Forward_thumb.jpg" alt="Forsyth Forward logo set in tree canopy" />
+									<a href="images/gallery/fulls/B52.jpg" class="image">
+										<img src="images/gallery/thumbs/B52-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<p>December 08, 2025</p>
-										<h3>Forsyth Forward</h3>
-										<p>Nestled in Michigan’s Upper Peninsula, Forsyth Township — including the communities of Gwinn, MI, K.I. Sawyer, MI, and Little Lake, MI — is getting a new spark of energy thanks to Forsyth Forward.</p>
+										<p>December 11, 2025</p>
+										<h3>Remembering A Legacy</h3>
+										<p>Hidden in Michigan's Upper Peninsula, the K.I. Sawyer Heritage Air Museum preserves the legacy of K.I. Sawyer Air Force Base (AFB)</p>
 										<ul class="actions fixed">
-											<li><a href="/blog/blog_posts/forsyth_forward.html" class="button small">Read More</a></li>
+											<li><a href="/blog/blog_posts/air-museum.html" class="button small">Read More</a></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/Sawyer-community-enrichment.jpg" class="image">
+										<img src="images/gallery/thumbs/Sawyer-community-enrichment-thumb.jpg" alt="Sawyer Community Enrichment logo" />
+									</a>
+									<div class="caption">
+										<p>December 10, 2025</p>
+										<h3>Building Together</h3>
+										<p>Nestled in K.I. Sawyer, Michigan, Sawyer Community Enrichment has become a cornerstone for community</p>
+										<ul class="actions fixed">
+											<li><a href="/blog/blog_posts/building-together.html" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article>
@@ -126,23 +139,24 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/Sawyer-community-enrichment.jpg" class="image">
-										<img src="images/gallery/thumbs/Sawyer-community-enrichment-thumb.jpg" alt="Sawyer Community Enrichment logo" />
+									<a href="/images/gallery/fulls/Forsyth Forward.jpg" class="image">
+										<img src="images/gallery/thumbs/Forsyth_Forward_thumb.jpg" alt="Forsyth Forward logo set in tree canopy" />
 									</a>
 									<div class="caption">
-										<p>December 10, 2025</p>
-										<h3>Building Together</h3>
-										<p>Nestled in K.I. Sawyer, Michigan, Sawyer Community Enrichment has become a cornerstone for community</p>
+										<p>December 08, 2025</p>
+										<h3>Forsyth Forward</h3>
+										<p>Nestled in Michigan's Upper Peninsula, Forsyth Township — including the communities of Gwinn, MI, K.I. Sawyer, MI, and Little Lake, MI — is getting a new spark of energy thanks to Forsyth Forward.</p>
 										<ul class="actions fixed">
-											<li><a href="/blog/blog_posts/building-together.html" class="button small">Read More</a></li>
+											<li><a href="/blog/blog_posts/forsyth_forward.html" class="button small">Read More</a></li>
 										</ul>
 									</div>
 								</article>
 
+
 								<!-- TEMPLATE -->
 								<!-- <article>
-									<a href="images/gallery/fulls/blank.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
+									<a href="images/gallery/fulls/blank-full.jpg" class="image">
+										<img src="images/gallery/thumbs/blank-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<p>Blog Date</p>
