Added Food forest blog

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/community1.jpg" alt="" />
+							<img src="images/community1.jpg" alt="People standing on rocks by water with sun in background" />
 						</div>
 					</section>
 
@@ -42,7 +42,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/spotlight01.jpg" alt="Little trout lake beach and pavillion" />
 						</div>
 					</section>
 
@@ -56,7 +56,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/spotlight02.jpg" alt="B52 bomber and sign" />
 						</div>
 					</section>
 
@@ -73,7 +73,7 @@
 				
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/spotlight03.jpg" alt="Person with dog walking on trail in woods" />
 						</div>
 					</section>
 
@@ -87,8 +87,21 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
+									<a href="images/gallery/fulls/food-forest.jpg" class="image">
+										<img src="images/gallery/thumbs/food-forest-thumb.jpg" alt="Pears hanging from tree" />
+									</a>
+									<div class="caption">
+										<p>December 12, 2025</p>
+										<h3>Sustainable Food Forest</h3>
+										<p>Through the KI Sawyer Sustainable Food Forest Project residents are coming together to design, plant, and care for a long-term, community-driven food forest.</p>
+										<ul class="actions fixed">
+											<li><a href="blog/blog_posts/kiss-forest.html" class="button small">Read More</a></li>
+										</ul>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/B52.jpg" class="image">
-										<img src="images/gallery/thumbs/B52-thumb.jpg" alt="" />
+										<img src="images/gallery/thumbs/B52-thumb.jpg" alt="B52 Bomber and sign" />
 									</a>
 									<div class="caption">
 										<p>December 11, 2025</p>
